# gst-barcode-reader

./: README  README.md  configure.ac  meson.build
src/: Makefile.am  barcodeChainList.cpp  barcodeChainList.h  barcodereader.cpp  barcodereader.h  gstbarcodereaderplugin.cpp  gstbarcodereaderplugin.h
